--- a/styles/global-styles.css
+++ b/styles/global-styles.css
@@ -1,8 +1,11 @@
 * {
   font-family: 'Brown', -apple-system, system-ui, BlinkMacSystemFont,
     'Helvetica Neue', 'Helvetica', sans-serif;
-  background-color: var(--background-color);
   color: var(--text-color);
+}
+
+body {
+  background-color: var(--background-color);
 }
 
 h1,
