--- a/styles/global-styles.css
+++ b/styles/global-styles.css
@@ -2,6 +2,8 @@
   font-family: 'Brown', -apple-system, system-ui, BlinkMacSystemFont,
     'Helvetica Neue', 'Helvetica', sans-serif;
   color: var(--text-color);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
