add basic homepage design

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -10,6 +10,7 @@ body {
 
   --background-color: #222429;
   --text-color: #ffffff;
+  --footer-color: #7d849a;
 
   /* buttons */
   --icon-button-color: #ffffff;
@@ -40,6 +41,7 @@ body {
 body.light-mode {
   --background-color: #f5f7fb;
   --text-color: #485374;
+  --footer-color: #969fba;
 
   /* buttons */
   --icon-button-color: #485374;
