--- a/styles/reset.css
+++ b/styles/reset.css
@@ -39,6 +39,12 @@ body {
   --tabs-text-color-active: #ffffff;
   --tabs-border-color-track: #333740;
   --tabs-border-color-active: #ffffff;
+
+  /* modal */
+  --modal-overlay: #222429;
+  --modal-background: #333740;
+  --modal-border: #494d59;
+  --modal-shadow: 0px 1px 3px #141721;
 }
 
 body.light-mode {
@@ -73,6 +79,12 @@ body.light-mode {
   --tabs-text-color-active: #485374;
   --tabs-border-color-track: #e8ebf3;
   --tabs-border-color-active: #3061f6;
+
+  /* modal */
+  --modal-overlay: #f5f7fb;
+  --modal-background: #ffffff;
+  --modal-border: #b8c0d8;
+  --modal-shadow: 0px 1px 3px #d5d8e1;
 }
 *,
 *::before,
